After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 684214 - messageTray: Fix summary position in RTL locales
messageTray: Fix summary position in RTL locales
Status: RESOLVED FIXED
Product: gnome-shell
Classification: Core
Component: message-tray
unspecified
Other All
: Normal normal
: ---
Assigned To: gnome-shell-maint
gnome-shell-maint
Depends on:
Blocks:
 
 
Reported: 2012-09-17 13:32 UTC by Florian Müllner
Modified: 2012-09-19 01:45 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
messageTray: Fix summary position in RTL locales (1.38 KB, patch)
2012-09-17 13:32 UTC, Florian Müllner
committed Details | Review

Description Florian Müllner 2012-09-17 13:32:07 UTC
See patch.
Comment 1 Florian Müllner 2012-09-17 13:32:10 UTC
Created attachment 224506 [details] [review]
messageTray: Fix summary position in RTL locales
Comment 2 Giovanni Campagna 2012-09-17 13:41:42 UTC
Review of attachment 224506 [details] [review]:

Clutter.ActorAlign.END is not Clutter.ActorAlign.RIGHT. If ClutterBinLayout doesn't respect that, it's a clutter bug.
Comment 3 Matthias Clasen 2012-09-19 01:03:48 UTC
For better or worse, the docs are pretty explicit about START == left and END == right.
Comment 4 Matthias Clasen 2012-09-19 01:09:32 UTC
And there's no Clutter.ActorAlign.RIGHT, anyway.
So I'd say this patch is probably the right workaround for now.
But you may want to file a clutter bug to sort out left/right vs start/end for 2.0.
We never got that really cleaned up for gtk either, sadly...
Comment 5 Jasper St. Pierre (not reading bugmail) 2012-09-19 01:38:03 UTC
No, Giovanni is right. ClutterBoxLayout explicitly checks RTL

http://git.gnome.org/browse/clutter/tree/clutter/clutter-box-layout.c#n1091
http://git.gnome.org/browse/clutter/tree/clutter/clutter-box-layout.c#n1218

We rely on this behavior in lots of other places, so we shouldn't workaround it in one place, but instead investigate.
Comment 6 Jasper St. Pierre (not reading bugmail) 2012-09-19 01:38:42 UTC
Oh, sorry, I just realized that this is an St.BoxLayout and not a ClutterBoxLayout.
Comment 7 Jasper St. Pierre (not reading bugmail) 2012-09-19 01:40:03 UTC
Review of attachment 224506 [details] [review]:

Yeah, let's go with this for now.
Comment 8 Florian Müllner 2012-09-19 01:41:02 UTC
The documentation states that "For horizontal layouts, in right-to-left locales this should be reversed."

So it's a bikeshedding question of whether a BinLayout is horizontal or vertical.
Comment 9 Florian Müllner 2012-09-19 01:45:53 UTC
Attachment 224506 [details] pushed as e6ba7c6 - messageTray: Fix summary position in RTL locales